--- a/array_cardio.html
+++ b/array_cardio.html
@@ -27,29 +27,37 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
+    inventors.filter(inventor => inventor.year.toString().slice(0,2) === '15'); //lol
     // Array.prototype.map()
     // 2. Give us an array of the inventory first and last names
-
+    inventors.map(inventor => `${inventor.first},${inventor.last}`);
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
-
+    inventors.sort((a,b) => {return b.year - a.year})
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    inventors.reduce((acc,inventor) => {
+      const name = `${inventor.first} ${inventor.last}`
+      acc[name] = `lived ${inventor.passed - inventor.year} years.`
+      return acc;
+    }, {})
 
     // 5. Sort the inventors by years lived
-
+    inventors.sort((a,b) => (b.passed - b.year) - (a.passed - a.year););
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
-
+    people.sort();
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
-
+    data.reduce((table, thing) => {
+      table[thing] = !table[thing] ? 1 : table[thing] + 1;
+      return table;
+    },{})
   </script>
 </body>
 </html>
