--- a/array_cardio.html
+++ b/array_cardio.html
@@ -33,14 +33,13 @@
     inventors.map(inventor => `${inventor.first},${inventor.last}`);
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
-    inventors.sort((a,b) => {return b.year - a.year})
+    inventors.sort((a,b) => b.year - a.year)
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
     inventors.reduce((acc,inventor) => {
-      const name = `${inventor.first} ${inventor.last}`
-      acc[name] = `lived ${inventor.passed - inventor.year} years.`
+      acc += inventor.passed - inventor.year
       return acc;
-    }, {})
+    })
 
     // 5. Sort the inventors by years lived
     inventors.sort((a,b) => (b.passed - b.year) - (a.passed - a.year););
